# rust-stock

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  NOTICE  README.en.md  README.ja.md  README.ko.md  README.md  vip.md
.github/workflows/: ci.yml
docs/screenshots/: README.md
rust-stock/: README.md
rust-stock/src/: band.html  index.html  main.js
rust-stock/src-tauri/: Cargo.toml  tauri.conf.json
rust-stock/src-tauri/capabilities/: default.json  desktop.json
rust-stock/src-tauri/icons/: icon.icns
rust-stock/src-tauri/src/: ai.rs  extra.rs  feed.rs  kline.rs  lib.rs  main.rs  quote.rs  storage.rs
rust-stock/src-tauri/src/sources/: eastmoney.rs  mod.rs  sina.rs
rust-stock/src/js/: api.js  band.js  bridge.js  chip.js  klinecache.js  mytt.js  router.js  store.js  ui.js
rust-stock/src/js/pages/: analysis.js  chat.js  kline.js  market.js  news.js  recommend.js  settings.js  watch.js
