[package]
name = "rust-stock"
version = "0.1.0"
description = "rust-stock — 可吸附边缘的悬浮行情助手"
edition = "2021"

[lib]
name = "rust_stock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"  # 开机自启动
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 行情抓取 + AI 流式（stream feature 用于 DeepSeek SSE）
reqwest = { version = "0.12", features = ["gzip", "stream"] }
encoding_rs = "0.8"   # 新浪 GBK 转 UTF-8
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"  # 流式响应 bytes_stream
async-trait = "0.1"   # QuoteSource trait 的 dyn 动态分发
# 本地存储（bundled 自带 SQLite，免装系统库）
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = ["net"]
net = []
